# 5400-Final-Project

./: .gitignore  README.html  README.md  environment.yml  last_words_with_topics.csv  pyproject.toml  pytest.ini  setup.py  texas_collect_last_word.py  texas_extract_dates.py  text_cleaning.ipynb
Criminal-Classifier-Model/: main.py  run_code.txt
Criminal-Classifier-Model/data/: texas_labeled_final_with_NA.csv
Criminal-Classifier-Model/tests/: __init__.py
Emotion-Model/: emotion_analysis.py  emotions_anly_oop.ipynb  last_words_data_with_emotion (1).csv
criminal_classifier/: main.py
data/: last_words_20th_century.csv  last_words_21st_century.csv  last_words_of_the_executed.csv  texas_execution_dates.csv  texas_last_statements.csv  texas_last_statements_final.csv  texas_last_statements_labeled.csv
data/processed/: test.csv  train.csv
data/processed_data/: emotion_output.csv  label_last_words_ironic.xlsx  label_last_words_notable.xlsx  label_last_words_pre5_to_17_century.xlsx  last_words_data.csv  last_words_with_topics.csv  last_words_with_topics__ALL.csv  texas_last_statements_labeled.csv  train.csv
data/raw/: last_words_data.csv
data/raw_data/: last_words_18th_century.csv  last_words_pre5_to_17_century.csv  texas_execution_dates_with_statements.csv
data_process/: texas_data_processing.ipynb  texas_data_processing.py  wikipedia_scraping.ipynb  wikipedia_scraping.py
labeled_wiki_data/: label_last_words_18th_century.xlsx  label_last_words_19th_century.xlsx  label_last_words_20th_century.xlsx  label_last_words_21st_century.xlsx  label_last_words_notable.xlsx  last_words_of_the_executed_labeled.csv
lda/: lda_last_words.py  lda_last_words_kgrid.py
model/: class_model.py
model/eval/: eval.py
model/utils/: load_data.py
relig_labeled_data/: relig_label_last_words_19th_century.xlsx  relig_label_last_words_ironic.xlsx  relig_label_last_words_notable.xlsx  relig_label_last_words_pre5_to_17_century.xlsx
src/data_process/: texas_data_processing.ipynb  wikipedia_scraping.ipynb
tests/: test_criminal.py
wiki_data/: last_words_19th_century.csv  last_words_ironic.csv  last_words_notable.csv
(+11 files in other folders)
