[project]
name = "5400-final-project"
version = "0.1.0"
description = "Final Project for DSAN 5400 - Computational Linguistics"
authors = [
    {name = "User", email = "user@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "nltk (>=3.8.1,<4.0.0)",
    "spacy (>=3.5.0,<4.0.0)",
    "gensim (>=4.3.0,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
