[project]
name = "5400-final-project"
version = "0.1.0"
description = "Combined data processing and modeling package"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "requests",
    "beautifulsoup4",
    "scikit-learn",
    "gensim",
    "nltk",
    "spacy",
    "transformers",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
